test/end-to-end/runnable/variant-template.crow
main void()
	info log "{1.x f}"
	info log "{2::nat.x2 g}"
	()

v[t] variant mut
x[t] record(value t) t v variant-member
f nat(a nat v)
	match a
	as x value
		value
	else
		0

v2 variant mut
x2[t] record(value t) v2 variant-member
g nat(a v2)
	match a
	as x2 value nat
		value
	else
		0
